--- a/index.html
+++ b/index.html
@@ -1,10 +1,272 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Food ResQ | Home</title>
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="styles/index.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+
 </head>
+
 <body>
-    Hello World 
+
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html">
+            <img src="images/logo.JPG" alt="" style="height: 80px; width: 200px;" alt="" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item" style="padding-left: 30px; padding-right: 100px;">
+                    <a class="nav-link" href="login.html"><span class="fas fa-user-plus"></span> Login</a>
+
+                </li>
+                <li class="nav-item" style="padding-left: 30px; padding-right: 100px;">
+                    <a class="nav-link" href="signup.html"><span class="fas fa-user-plus"></span> Signup</a>
+
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+    <!-- End of Navbar -->
+
+
+   
+    <section id="intro">
+
+        <div class="wave">
+
+            <svg width="100%" height="355px" viewBox="0 0 1920 355" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="Apple-TV" transform="translate(0.000000, -402.000000)" fill="white">
+                        <path
+                            d="M0,439.134243 C175.04074,464.89273 327.944386,477.771974 458.710937,477.771974 C654.860765,477.771974 870.645295,442.632362 1205.9828,410.192501 C1429.54114,388.565926 1667.54687,411.092417 1920,477.771974 L1920,757 L1017.15166,757 L0,757 L0,439.134243 Z"
+                            id="Path"></path>
+                    </g>
+                </g>
+            </svg>
+
+        </div>
+
+        <div class="intro-text" data-aos="fade-down" data-aos-delay="100">
+            <h2>The Greatest Good is what we do for one another!</h2>
+            <p>Do your part and join us with <span class="font-weight:bolder; color:#9983E7">Food ResQ!</span></p>
+            <span><a href="signup.html" class="btn-get-started scrollto">Signup</a>
+                <a href="login.html" class="btn-get-started scrollto">Login</a></span>
+        </div>
+
+        <div class="row product-screens text-center">
+
+            <div class="col-12 product-screen-1" data-aos="fade-up" data-aos-delay="100">
+                <img src="images/Pic3-new.png" alt="" height="470px">
+            </div>
+
+        </div>
+
+
+
+    </section><!-- End Intro Section -->
+
+
+    <section id="about" class="about mt-5 pt-5">
+        <div class="container" data-aos="fade-up">
+            <div class="row text-center">
+                <h1 class="col-12 mt-5 pb-5 " style="color:#9983E7">About Food ResQ</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+                    <img src="images/Pic1-new.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"
+                    data-aos-delay="100">
+
+                    <p class="text-justify">
+                        An approximate estimation of 1.3 billion tonnes of food is wasted globally each year.
+                        Food has and always will be the first and foremost primary necessity of the
+                        the living world. At Food ResQ, we realise the importance of each grain and wish to
+                        do our part in the reducing food-wastage and in-turn eliminating the world's hunger bit by bit.
+
+                    </p>
+                    <p class="text-justify">
+                        We aim to bridge the
+                        gap between the restaurants, that deal with discarding the leftover-food daily, and
+                        those people(ResQ-ers) who wish to contribute and do a good deed by making sure the food reaches
+                        the right place. We connect the food providers and the food distributors
+                        by bringing them together
+                        and make the food-donation process easier and faster so that no one, who wishes to help the
+                        needy, finds it difficult just because
+                        he/she cannot find the medium to do so.
+
+                    </p>
+
+                    <p class="text-justify">
+                        What makes Food ResQ different is that we not only care for the needy people, but also keep in mind the struggle
+                        of the stray animals to find food to kill their hunger. Thus we provide a option for the Restaurants
+                        to post slots and distinguish the leftover food
+                        into categories separately for the poor needy beings as well as the strays. The locations of these restaurants can be easily viewed by our
+                         ResQu-ers on the map available and in-turn book the pickup slots at the same time.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+    <section id="features" style="background-color:#DEDEDE">
+        <div class="container">
+            <div class="row text-center">
+                <h1 class="col-12 mt-3 pb-5 " style="color:#9983E7">What does Food ResQ provide?</h1>
+            </div>
+            <div class="row">
+
+                <div class="col-lg-4 col-md-5 features-img">
+                    <img src="images/featurebg.webp" alt="" data-aos="fade-left" height="300px">
+                </div>
+
+                <div class="col-lg-8 col-md-7 pb-5">
+
+                    <div class="row">
+
+                        <div class="col-lg-6 col-md-6 box " data-aos="fade-right">
+                            <div class="icon"><i class="fas fa-utensils"></i></div>
+                            <h4 class="title"><a href="">Create an Account as a Restaurant!</a></h4>
+                            <p class="description">Wish to put your restaurant's leftover food to some great use? Create
+                                an account on Food ResQ today!</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 box " data-wow-delay="0.1s" data-aos="fade-right">
+                            <div class="icon"><i class="fas fa-user"></i></div>
+                            <h4 class="title"><a href="">Create an Account as a ResQ-er!</a></h4>
+                            <p class="description">Every effort counts! Signup today at Food ResQ and earn a blessing!
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 box " data-wow-delay="0.2s" data-aos="fade-right">
+                            <div class="icon"><i class="fas fa-concierge-bell"></i></div>
+                            <h4 class="title"><a href="">Get leftover food collected as Restaurant!</a></h4>
+                            <p class="description">Post a time-slot under categories of food for either for the
+                                needypeople or stray animals</p>
+                        </div>
+                        <div class="col-lg-6 col-md-6 box" data-wow-delay="0.3s" data-aos="fade-right">
+                            <div class="icon"><i class="fas fa-compass"></i></div>
+                            <h4 class="title"><a href="">Pick nearby restaurant as a ResQ-er!</a></h4>
+                            <p class="description">View the nearby restaurants marked on the map and book a slot to
+                                pickup the </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section><!-- End Featuress Section -->
+
+
+    <!-- Team Section  -->
+    <section id="team" class="team">
+        <div class="container" data-aos="fade-up">
+
+            <div class="row text-center">
+                <h1 class="col-12 mt-3 pb-5 " style="color:#9983E7">Developers behind Food ResQ</h1>
+            </div>
+            <div class="row">
+
+                <div class="col-md-4 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="100">
+                        <div class="member-img">
+                            <img src="images/nikhil.jpg" class="img-fluid" alt="">
+                            <div class="social">
+                                <a href="https://github.com/nikhils4"><i class="fa fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/nikhils4/"><i class="fa fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info text-center">
+                            <h4>Nikhil Singh</h4>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="200">
+                        <div class="member-img">
+                            <img src="images/shreya.jpg" class="img-fluid" alt="">
+                            <div class="social">
+                                <a href="https://github.com/mshreya9"><i class="fa fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/mshreya9/"><i class="fa fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info text-center">
+                            <h4>Shreya Maheshwari</h4>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="300">
+                        <div class="member-img">
+                            <img src="images/saloni.PNG" class="img-fluid" alt="">
+                            <div class="social">
+                                <a href="https://github.com/saloni0104"><i class="fa fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/saloni-parekh-0104/"><i
+                                        class="fa fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info text-center">
+                            <h4>Saloni Parekh</h4>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Team Section -->
+
+
+    <!-- Scripts -->
+    <script src="./javascript/index.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+
 </body>
+
 </html>
