--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row product-screens text-center">
 
             <div class="col-12 product-screen-1" data-aos="fade-up" data-aos-delay="100">
-                <img src="images/Pic3-new.png" alt="" height="470px">
+                <img src="images/Pic3-new.png" alt="" height="300px">
             </div>
 
         </div>
@@ -96,7 +96,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-                    <img src="images/Pic1-new.jpg" class="img-fluid" alt="">
+                    <img src="images/pic-4.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right"
                     data-aos-delay="100">
@@ -143,7 +143,7 @@
             <div class="row">
 
                 <div class="col-lg-4 col-md-5 features-img">
-                    <img src="images/featurebg.webp" alt="" data-aos="fade-left" height="300px">
+                    <img src="images/pic-5-new.png" alt="" data-aos="fade-left" height="400px">
                 </div>
 
                 <div class="col-lg-8 col-md-7 pb-5">
@@ -194,8 +194,8 @@
             </div>
             <div class="row">
 
-                <div class="col-md-4 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-md-4 d-flex align-items-stretch" >
+                    <div class="member" data-aos="fade-up" data-aos-delay="100" style="background-color:#988ADF;">
                         <div class="member-img">
                             <img src="images/nikhil.jpg" class="img-fluid" alt="">
                             <div class="social">
@@ -210,8 +210,8 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-4 d-flex align-items-stretch" >
+                    <div class="member" data-aos="fade-up" data-aos-delay="200" style="background-color:#988ADF;">
                         <div class="member-img">
                             <img src="images/shreya.jpg" class="img-fluid" alt="">
                             <div class="social">
@@ -227,7 +227,7 @@
                 </div>
 
                 <div class="col-md-4 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="300">
+                    <div class="member" data-aos="fade-up" data-aos-delay="300" style="background-color:#988ADF;">
                         <div class="member-img">
                             <img src="images/saloni.PNG" class="img-fluid" alt="">
                             <div class="social">
