--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="row product-screens text-center">
 
-            <div class="col-12 product-screen-1" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-12 product-screen-1 mt-5" data-aos="fade-up" data-aos-delay="100">
                 <img src="images/Pic3-new.png" alt="" height="350px">
             </div>
 
