--- a/restaurantprofile.html
+++ b/restaurantprofile.html
@@ -92,69 +92,14 @@
             <div class="col-12 text-center">
                 <h3 style="margin-bottom: 50px;">Your Posts</h3>
             </div>
+            <div id="post-container"></div>
         </div>
 
 
-        <div
-            style="border: 2px solid transparent; border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 
-            <div class="row" style="margin-top:30px;">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
-                    <div class="row" style="text-align: center;">
-                        <div class="col-6">31 Feb, 2021</div>
-                        <div class="col-6">Time Slot</div>
-                    </div>
-                </div>
-                <div class="col-2"></div>
-            </div>
-            <div class="row" style="margin-top:30px;">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
-                    <ul type="none" style="text-align: center;  border: 2px solid black;">
-                        <li>Chicken - 10kg</li>
-                        <li>Paneer - 20kg</li>
-                    </ul>
-                </div>
-                <div class="col-2"></div>
-            </div>
-
-            <div class="row text-center">
-                <div class="col-12 my-4">
-                    <h5>User Details</h5>
-                </div>
-                <div class="col-12">
-                    <b>Name</b> : Shreya Maheshwari <br>
-                    <b>Phone</b>: 8005760353 <br>
-                    <b>Email</b> shreya.maheshwari06@gmail.com
-                </div>
-            </div>
-
-
-
-
-            <div class="row text-center" style="margin-top: 50px;">
-                <div class="col-12" style="padding-bottom:30px;">
-                    <h5>Did the user bought what he made the request for?</h5>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-8">
-                    <div class="row" style="margin-bottom: 50px;">
-                        <div class="col-6">
-                            <button id="userprofile-yes">Yes</button>
-                        </div>
-                        <div class="col-6">
-                            <button id="userprofile-no">No</button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-        </div>
 
         <!-- Scripts -->
-        <script src="./javascript/food.js"></script>
+        <script src="./javascript/rest-profile.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
