User profile update

--- a/user-profile.html
+++ b/user-profile.html
@@ -68,11 +68,11 @@
                         <div class="row">
                             <div class="col-lg-6" style="color: white">
                                 <h4>Total bookings</h4>
-                                <span>12</span>
+                                <span>3</span>
                             </div>
                             <div class="col-lg-6" style="color: white">
                                 <h4>Success</h4>
-                                <span>10</span>
+                                <span>3</span>
                             </div>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
             <div style="display: inline-block;">
                 <h5 style="padding-top: 20px;">Shreya Maheshwari</h5>
                 <h5>Level 1</h5>
-                <h5>Points - 111</h5>
+                <h5>Points - 15</h5>
             </div>
 
         </div>
@@ -93,9 +93,13 @@
             <div class="col-12 text-center">
                 <h3 style="margin-bottom: 50px;">Your Posts</h3>
             </div>
-            <div id="post-container"></div>
+            <div class="col-12">
+                <div id="post-container"></div>
+            </div>
+           
         </div>
 
+    </div>
 
 
         <!-- Scripts -->
