rest profile update

--- a/restaurantprofile.html
+++ b/restaurantprofile.html
@@ -92,7 +92,9 @@
             <div class="col-12 text-center">
                 <h3 style="margin-bottom: 50px;">Your Posts</h3>
             </div>
-            <div id="post-container"></div>
+            <div class="col-12">
+                <div id="post-container"></div>
+            </div>
         </div>
 
 
