Login Signup fix

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
     <style>
         body {
-            background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+            background-image: linear-gradient(to left, #dedede, #ccc7e2, #bbb1e5, #aa9ae6, #9983e7);
         }
     </style>
 
@@ -98,7 +98,7 @@
 
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <h3 class="login-register-heading">Login as a Restaurant</h3>
+                        <h3 class="login-register-heading" style="color:#9983E7">Login as a Restaurant</h3>
                         <div class="row login-register-form">
                             <div class="col-md-10 offset-md-1">
                                 <div class="form-group form-label-group">
