--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
 
     <style>
         body {
-            background: -webkit-linear-gradient(left, #3931af, #00c6ff);
+            background-image: linear-gradient(to left, #dedede, #ccc7e2, #bbb1e5, #aa9ae6, #9983e7);
         }
     </style>
 
