--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                                    aria-controls="profile" aria-selected="false">User</a>
+                                    aria-controls="profile" aria-selected="false">ResQ-uer</a>
                             </li>
                         </ul>
                     </div>
@@ -98,7 +98,7 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-                        <h3 class="signup-register-heading">Signup as a Restaurant</h3>
+                        <h3 class="signup-register-heading" style="color:#9983E7">Signup as a Restaurant</h3>
                         <div class="row signup-register-form">
                             <div class="col-md-6">
                                 <div class="form-group form-label-group">
@@ -195,7 +195,7 @@
                     <!-- User-->
 
                     <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                        <h3 class="signup-register-heading">Signup as a User</h3>
+                        <h3 class="signup-register-heading" style="color:#9983E7">Signup as a ResQ-uer</h3>
 
                         <div class="row signup-register-form">
                             <div class="col-md-6">
