--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                                    aria-controls="profile" aria-selected="false">User</a>
+                                    aria-controls="profile" aria-selected="false">ResQ-uer</a>
                             </li>
                         </ul>
                     </div>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                        <h3 class="login-register-heading">Login as a User</h3>
+                        <h3 class="login-register-heading" style="color:#9983E7">Login as a ResQ-uer</h3>
                         <div class="row login-register-form">
                             <div class="col-md-10 offset-md-1">
                                 <div class="form-group form-label-group">
