--- a/user-display.html
+++ b/user-display.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="./styles/login.css" />
     <link rel="stylesheet" href="/styles/navbar.css" />
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
 </head>
 
 <body>
