--- a/restaurantprofile.html
+++ b/restaurantprofile.html
@@ -67,11 +67,11 @@
                         <div class="row">
                             <div class="col-lg-6" style="color: white">
                                 <h4>Total bookings</h4>
-                                <span>12</span>
+                                <span>3</span>
                             </div>
                             <div class="col-lg-6" style="color: white">
                                 <h4>Success</h4>
-                                <span>10</span>
+                                <span>3</span>
                             </div>
                         </div>
                     </div>
@@ -82,9 +82,9 @@
             <img src="./images/shreya.jpg"
                 style="border-radius: 50%; width: 100px; height: 100px; margin-left: 50px; transform: translateY(-50%);">
             <div style="display: inline-block;">
-                <h5 style="padding-top: 20px;">Square 36</h5>
+                <h5 style="padding-top: 20px;">Hotel Grand</h5>
                 <h5>Level 1</h5>
-                <h5>Points - 111</h5>
+                <h5>Points - 15</h5>
             </div>
 
         </div>
