--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <div class="icon"><i class="fas fa-compass"></i></div>
                             <h4 class="title"><a href="">Pick nearby restaurant as a ResQ-er!</a></h4>
                             <p class="description">View the nearby restaurants marked on the map and book a slot to
-                                pickup the </p>
+                                pickup the food </p>
                         </div>
                     </div>
 
