--- a/restaurantprofile.html
+++ b/restaurantprofile.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="row">
-            <img src="./images/shreya.jpg"
+            <img src="./images/hotel grand.jpg"
                 style="border-radius: 50%; width: 100px; height: 100px; margin-left: 50px; transform: translateY(-50%);">
             <div style="display: inline-block;">
                 <h5 style="padding-top: 20px;">Hotel Grand</h5>
